[package]
name = "gdb-agent"
version = "0.1.1"
authors = ["Kyle Huey <khuey@kylehuey.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/khuey/gdb-agent"
description = "Gdb agent bytecode handling utilities."
keywords = ["gdb", "debugger"]

[dependencies]
byteorder = "1.1.0"
enum_index = { git = "https://github.com/khuey/enum_index", branch = "enum-discr" }
enum_index_derive = { git = "https://github.com/khuey/enum_index", branch = "enum-discr" }
error-chain = "0.12"
