[package]
name = "gdb-agent"
version = "0.1.2"
edition = "2018"
authors = ["Kyle Huey <khuey@kylehuey.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/khuey/gdb-agent"
description = "Gdb agent bytecode handling utilities."
keywords = ["gdb", "debugger"]

[dependencies]
byteorder = "1.1.0"
error-chain = "0.12"
num_enum = "0.5"
